@@ -67,6 +67,8 @@
     (letrec              (core-macro . letrec))
     (letrec*             (core-macro . letrec*))
     (if                  (core-macro . if))
+    (and                 (core-macro . and))
+    (or                  (core-macro . or))
     (when                (macro . when))         
     (unless              (macro . unless))
     (parameterize        (macro . parameterize))
@@ -91,8 +93,8 @@
     (let*                (macro . let*))
     (cond                (macro . cond))
     (do                  (macro . do))
-    (and                 (macro . and))
-    (or                  (macro . or))
+;    (and                 (macro . and))
+;    (or                  (macro . or))
     (time                (macro . time))
     (delay               (macro . delay))
     (endianness          (macro . endianness))
